--- a/index.html
+++ b/index.html
@@ -8,29 +8,9 @@
 </head>
 <body>
     <div class="center screen">
-        <div class="rect toolbar">
-
-        </div>
-        <div class="rect game">
-            <button class="block"></button>
-            <!-- <div class="btn-group" style="width:100%">
-                <button style="width:50%">Apple</button>
-                <button style="width:50%">Sony</button>
-            </div>
-            
-            <div class="btn-group" style="width:100%">
-                <button style="width:33.3%">Apple</button>
-                <button style="width:33.3%">Samsung</button>
-                <button style="width:33.3%">Sony</button>
-            </div>
-            
-            <div class="btn-group" style="width:100%">
-                <button style="width:25%">Apple</button>
-                <button style="width:25%">Samsung</button>
-                <button style="width:25%">Sony</button>
-                <button style="width:25%">HTC</button>
-            </div> -->
-        </div>
+        <div class="rect toolbar"></div>
+        <div class="rect game center" id="game"></div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
