--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <div class="rect toolbar"></div>
         <div class="rect game center" id="game"></div>
     </div>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
