Added colors for number blocks

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="rect toolbar"></div>
         <div class="rect game center" id="game"></div>
     </div>
+    <script src="config.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html>
