--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minesweeper</title>
+    <link rel="icon" href="resources/flag.svg">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
