Changed css style of the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="center screen">
+    <div class="screen">
         <div class="rect toolbar center">
             <div class="inner-toolbar">
                 <img id="reset" class="pointer" src="resources/reset.svg"/>
@@ -22,7 +22,7 @@
                 </div>
             </div>
         </div>
-        <div class="rect game center" id="game"></div>
+        <div class="rect game" id="game"></div>
     </div>
     <script src="config.js"></script>
     <script type="module" src="app.js"></script>
