Added home screen

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="screen">
+    <div id="home-screen" class="center">
+        <img class="logo" src="resources/logo.svg"/>
+        <div class="menu">
+            <div class="menu-text">
+                <div><span id="rows-text">9</span> Rows</div>
+                <div><span id="cols-text">9</span> Columns</div>
+                <div><span id="mines-text">10</span> Mines</div>
+            </div>
+            <div>
+                <div><input id="rows-range" class="slider" type="range" min="5" max="20" value="9"/></div>
+                <div><input id="cols-range" class="slider" type="range" min="5" max="20" value="9"/></div>
+                <div><input id="mines-range" class="slider" type="range" min="3" max="64" value="10"/></div>
+            </div>
+        </div>
+        
+        <button id="start-button">Let's play</button>
+    </div>
+
+    <div id="game-screen">
         <div class="rect toolbar center">
             <div class="inner-toolbar">
                 <img id="reset" class="pointer" src="resources/reset.svg"/>
@@ -17,14 +35,16 @@
                     <img class="margin" src="resources/clock.svg">
                 </div>
                 <div class="full-height center">
-                    <div id="mines-text">10</div>
+                    <div id="remained-mines">10</div>
                     <img class="margin" src="resources/flag.svg">
                 </div>
             </div>
         </div>
         <div class="rect game" id="game"></div>
     </div>
+
     <script src="config.js"></script>
     <script type="module" src="app.js"></script>
+    <script type="module" src="home.js"></script>
 </body>
 </html>
